refactor: 예외처리, Reservation setter삭제, db초기화